Change background music and volume settings
Updated background music source and adjusted volume settings.

--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
 
 <body>
 
-<!-- 🎵 Background Music (Starts on YES click) -->
+<!-- 🎵 SOFT ROMANTIC MUSIC -->
 <audio id="bgMusic" loop>
-    <source src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" type="audio/mpeg">
+    <source src="https://cdn.pixabay.com/audio/2022/10/30/audio_7c8bdf6d9c.mp3" type="audio/mpeg">
 </audio>
 
 <div class="card">
@@ -115,7 +115,7 @@
 <script>
 function yesClick() {
     const music = document.getElementById("bgMusic");
-    music.volume = 0.4;   // soft romantic volume
+    music.volume = 0.3;   // very soft & romantic
     music.play();
 
     alert(
