--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     }
 
     .card {
-        background: rgba(255,255,255,0.18);
-        backdrop-filter: blur(12px);
+        background: rgba(255,255,255,0.15);
+        backdrop-filter: blur(10px);
         padding: 40px;
         border-radius: 25px;
         text-align: center;
@@ -51,19 +51,29 @@
     }
 
     button {
-        padding: 14px 28px;
-        font-size: 1.1rem;
+        padding: 12px 22px;
+        font-size: 1rem;
         border: none;
         border-radius: 30px;
         cursor: pointer;
-        background: #ff2e63;
-        color: white;
+        margin: 8px;
         transition: 0.3s;
     }
 
-    button:hover {
-        background: #ff1744;
+    .yes {
+        background: #ff2e63;
+        color: white;
+    }
+
+    .yes:hover {
         transform: scale(1.1);
+        background: #ff1744;
+    }
+
+    .no {
+        background: #ffffff;
+        color: #ff2e63;
+        position: relative;
     }
 
     .heart {
@@ -83,14 +93,17 @@
         from {opacity: 0; transform: translateY(20px);}
         to {opacity: 1; transform: translateY(0);}
     }
+
+    audio {
+        display: none;
+    }
 </style>
 </head>
 
 <body>
 
-<!-- 🎵 SOFT ROMANTIC MUSIC -->
-<audio id="bgMusic" loop>
-    <source src="https://cdn.pixabay.com/audio/2022/10/30/audio_7c8bdf6d9c.mp3" type="audio/mpeg">
+<audio autoplay loop>
+    <source src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" type="audio/mpeg">
 </audio>
 
 <div class="card">
@@ -103,21 +116,17 @@
     </p>
 
     <div class="question">
-        You are already my Valentine 💌<br>
-        Just click YES ❤️
+        Will you be my Valentine? 💌
     </div>
 
     <div class="buttons">
-        <button onclick="yesClick()">Yes 💖</button>
+        <button class="yes" onclick="yesClick()">Yes 💖</button>
+        <button class="no" onmouseover="moveButton(this)">No 🙈</button>
     </div>
 </div>
 
 <script>
 function yesClick() {
-    const music = document.getElementById("bgMusic");
-    music.volume = 0.3;   // very soft & romantic
-    music.play();
-
     alert(
         "Sania ❤️\n\n" +
         "Thank you for choosing me.\n" +
@@ -125,6 +134,12 @@ function yesClick() {
         "and annoy you forever 😄\n\n" +
         "Happy Valentine’s Day 💕"
     );
+}
+
+function moveButton(btn) {
+    btn.style.position = "absolute";
+    btn.style.top = Math.random() * 80 + "%";
+    btn.style.left = Math.random() * 80 + "%";
 }
 
 function createHeart() {
